Simple start for commandline tool

--- a/command/CMakeLists.txt
+++ b/command/CMakeLists.txt
@@ -2,13 +2,13 @@
 # CPMAddPackage("gh:catchorg/Catch2@3.5.4")
 
 # Tests
-add_executable(goosey
+add_executable(gooscript-cmd
         main.cpp
 )
 
-target_link_libraries(goosey PRIVATE crab fmt gooscript)
+target_link_libraries(gooscript-cmd PRIVATE crab fmt gooscript)
 
-target_compile_definitions(goosey
+target_compile_definitions(gooscript-cmd
         PRIVATE
         "DEBUG=$<IF:$<CONFIG:Debug>,1,0>"
 )
