--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Build
       run: |
-        sudo apt install clang-23
+        sudo apt install clang++-23
     
     
     - name: Set reusable strings
