--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         build_type: [Debug, Release]
-        c_compiler: [clang]
+        c_compiler: [clang, gcc]
         include:
           - os: windows-latest
             c_compiler: clang
@@ -48,8 +48,7 @@ jobs:
 
     - name: Build
       run: |
-        sudo apt install clang++-23
-    
+        sudo apt install gcc-13
     
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
