--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -46,9 +46,9 @@ jobs:
 
     - uses: ashutoshvarma/setup-ninja@v1.1
 
-    - name: Build
-      run: |
-        sudo apt install gcc-13
+    - uses: egor-tensin/setup-gcc@v1
+      with:
+       version: 13
     
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
