--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -33,9 +33,9 @@ jobs:
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
-        # exclude:
-        #   - os: windows-latest
-        #     c_compiler: gcc
+        exclude:
+           - os: windows-latest
+             c_compiler: gcc
         #   - os: windows-latest
         #     c_compiler: clang
         #   - os: ubuntu-latest
