--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         build_type: [debug, release]
-        c_compiler: [clang, gcc]
+        c_compiler: [clang]
         include:
           - os: windows-latest
             c_compiler: clang
@@ -45,10 +45,6 @@ jobs:
     - uses: actions/checkout@v4
 
     - uses: ashutoshvarma/setup-ninja@v1.1
-
-    - uses: egor-tensin/setup-gcc@v1
-      with:
-       version: 13
     
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
@@ -62,9 +58,10 @@ jobs:
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
         cmake -B build/${{matrix.build_type}}
+        -GNinja
         --preset ${{ matrix.build_type }}
         -S ${{ github.workspace }}
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: cmake --build ${{ steps.strings.outputs.build-output-dir }}
