--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -46,6 +46,11 @@ jobs:
 
     - uses: ashutoshvarma/setup-ninja@v1.1
     
+    - name: Install Clang
+      uses: egor-tensin/setup-clang@v1
+      with:
+        version: 17.0.6
+            
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
