--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -23,7 +23,8 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        #os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         build_type: [debug, release]
         c_compiler: [clang]
         include:
@@ -45,12 +46,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - uses: ashutoshvarma/setup-ninja@v1.1
-    
-    - name: Install Clang
-      uses: egor-tensin/setup-clang@v1
-      with:
-        version: 17.0.6
-            
+  
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
