--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -28,9 +28,9 @@ jobs:
         build_type: [debug, release]
         c_compiler: [clang]
         include:
-          - os: windows-latest
-            c_compiler: clang
-            cpp_compiler: clang++
+          #- os: windows-latest
+          #  c_compiler: clang
+          #  cpp_compiler: clang++
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
