--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -46,7 +46,12 @@ jobs:
     - uses: actions/checkout@v4
 
     - uses: ashutoshvarma/setup-ninja@v1.1
-  
+    
+    - name: Set up Clang
+      uses: egor-tensin/setup-clang@v1
+      with:
+        version: 17
+        
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
