--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -23,20 +23,18 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        #os: [ubuntu-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
+        #os: [ubuntu-latest]
         build_type: [debug, release]
         c_compiler: [clang]
         include:
-          #- os: windows-latest
-          #  c_compiler: clang
-          #  cpp_compiler: clang++
+          - os: windows-latest
+            c_compiler: clang
+            cpp_compiler: clang++
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
-        exclude:
-           - os: windows-latest
-             c_compiler: gcc
+        # - exclude:
         #   - os: windows-latest
         #     c_compiler: clang
         #   - os: ubuntu-latest
@@ -71,3 +69,6 @@ jobs:
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }}
+    - name: Testing
+      run: |
+        build/${{matrix.build_type}}/bin/gooscript-tests -r xml -d yes --order lex
