--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -70,7 +70,8 @@ jobs:
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }}
     - name: Testing
-      working-directory: ${{github.workspace}}/build/${{matrix.built_type}}
+      working-directory: ${{github.workspace}}/build/${{matrix.build_type}}
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: |
+        ./bin/gooscript-tests -r xml -d yes --order lex
