--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -26,7 +26,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         #os: [ubuntu-latest]
         build_type: [debug, release]
-        c_compiler: [clang]
+        c_compiler: [clang, cl]
         include:
           - os: windows-latest
             c_compiler: clang
@@ -34,11 +34,11 @@ jobs:
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
-        # - exclude:
-        #   - os: windows-latest
-        #     c_compiler: clang
-        #   - os: ubuntu-latest
-        #     c_compiler: cl
+        exclude:
+          - os: windows-latest
+            c_compiler: clang
+          - os: ubuntu-latest
+            c_compiler: cl
 
     steps:
     - uses: actions/checkout@v4
