--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -26,7 +26,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         #os: [ubuntu-latest]
         build_type: [debug, release]
-        c_compiler: [clang, cl]
+        c_compiler: [clang, gcc, cl]
         include:
           - os: windows-latest
             c_compiler: clang
