--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         #os: [ubuntu-latest]
-        build_type: [debug, release]
+        build_type: [Debug, Release]
         c_compiler: [clang, gcc, cl]
         include:
           - os: windows-latest
@@ -55,22 +55,26 @@ jobs:
       id: strings
       shell: bash
       run: |
-        echo "build-output-dir=${{ github.workspace }}/build/${{matrix.build_type}}" >> "$GITHUB_OUTPUT"
+        echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
-        cmake -B build/${{matrix.build_type}}
+        cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -GNinja
-        --preset ${{ matrix.build_type }}
+        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }
+        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }
+        -DCMAKE_FLAGS_INIT="-Wall -Wextra -Wpedantic -Werror"
+        -DCMAKE_CXX_STANDARD="23"
+        -DCMAKE_CXX_STANDARD_REQUIRED="ON"
         -S ${{ github.workspace }}
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }}
     - name: Testing
-      working-directory: ${{github.workspace}}/build/${{matrix.build_type}}
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
