--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -63,8 +63,8 @@ jobs:
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -GNinja
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }
+        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_FLAGS_INIT="-Wall -Wextra -Wpedantic -Werror"
         -DCMAKE_CXX_STANDARD="23"
         -DCMAKE_CXX_STANDARD_REQUIRED="ON"
