--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 CPMAddPackage("gh:catchorg/Catch2@3.5.4")
 
+list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
+
 # Tests
 add_executable(gooscript-tests
         lexer.cpp
@@ -13,3 +15,7 @@ target_compile_definitions(gooscript-tests
         PRIVATE
         "DEBUG=$<IF:$<CONFIG:Debug>,1,0>"
 )
+
+include(CTest)
+include(Catch)
+catch_discover_tests(gooscript-tests)
