--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -26,14 +26,12 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         #os: [ubuntu-latest]
         build_type: [Debug, Release]
-        c_compiler: [clang, gcc, cl]
-        include:
-          - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
-          - os: ubuntu-latest
-            c_compiler: clang
-            cpp_compiler: clang++
+        # c_compiler: [clang, gcc, cl]
+        # include:
+        #   - os: windows-latest
+        #     c_compiler: [gcc, clang, cl]
+        #   - os: ubuntu-latest
+        #     c_compiler: [gcc, clang]
         exclude:
           - os: windows-latest
             c_compiler: clang
