--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -33,8 +33,8 @@ jobs:
         #   - os: ubuntu-latest
         #     c_compiler: [gcc, clang]
         exclude:
-          - os: windows-latest
-            c_compiler: clang
+          # - os: windows-latest
+          #   c_compiler: clang
           - os: ubuntu-latest
             c_compiler: cl
 
