--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required(VERSION 3.5)
 
-#set(CMAKE_CXX_STANDARD 23)
-#set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(gooscript VERSION 1.0)
+
+#set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 23)
+#set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
+
 
 #file(GLOB_RECURSE SOURCE_FILES "src/*.hpp")
 set(SOURCE_FILES
@@ -103,7 +107,16 @@ set(SOURCE_FILES
 
 
 add_library(${PROJECT_NAME} ${SOURCE_FILES})
-target_compile_options(${PROJECT_NAME} PRIVATE -std=c++23)
+
+
+if (MSVC)
+    add_compile_options(/Wall /WX /W2 /permissive-)
+    add_link_options(/WX)
+else ()
+    # Clang and GCC
+    add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+endif ()
+
 # add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
