--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 #set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(gooscript VERSION 1.0)
@@ -116,6 +117,7 @@ else ()
     # Clang and GCC
     add_compile_options(-std=c++23 -Wall -Wextra -Wpedantic -Werror)
 endif ()
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
 
 # add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
