Moved standard functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,8 @@ set(SOURCE_FILES
         src/runtime/data/Closure.hpp
         src/ast/expression/compound/Match.cpp
         src/ast/expression/compound/Match.hpp
+        src/runtime/builtin/StandardEnviornment.cpp
+        src/runtime/builtin/StandardEnviornment.hpp
 )
 
 
